/*
 * $Id: ChangeLog,v 1.3165 2004/07/18 14:35:28 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-18 10:54 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    * Minor correction to recent fix in SearnRep()

2004-07-18 11:30 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  * source/rtl/set.c
    include/hbset.h
    ! exported  hb_setGetFirstSetPath( void )
      Added HB_SET_STACK macro to access hb_set structure

2004-07-16 20:00 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  * source/vm/runner.c
    ! Fix __hrbgetfu() check parameters from ISNUL(1) to ISPOINTER(1)

2004-07-16 14:30 UTC-3 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/odbc/odbc.c
    ! Fixed GPF in SqlGetData()
    + Added SQLMoreResults()
    + Added SQLBindOutParam() - This is a big trap, and should be
      used only if you know EXACTLY what you're doing!

2004-07-16 08:45 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * source/rtl/tbrowse.prg
    !HitTest( oBrowse, nRow, nCol )
    Now properly adjusts the ::mColPos.

2004-07-15 20:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/checkbox.prg
  * source/rtl/pushbtn.prg
  * source/rtl/radiobtn.prg
  * source/rtl/radiogrp.prg
  * source/rtl/scrollbr.prg
  * source/rtl/tbrowse.prg
    + #include "button.ch"
    * replace constants with proper definitions.
    * formatting.
  * source/rtl/color53.prg
  * source/rtl/tpopup.prg
    * minor formatting.

2004-07-15 14:00 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/genc.c
    * Corrected HB_P*LOCALNEAR* generation to not use (unsigned char) casting as it resulted in compile warnings.

  * source/pp/ppcore.c
    ! Fixed SearnRep() handling of multiple Non Repeatable Marker into Residual Group.